# file-split-to-directory-rs

./: Cargo.toml  readme.md
examples/basic/: main.rs
examples/custom_directory_name/: main.rs
examples/custom_file_order/: main.rs
src/: lib.rs  main.rs
