[package]
name = "file-split-to-directory-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
natord = "1.0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
